--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.apache.thrift</groupId>
+      <artifactId>libthrift</artifactId>
+      <version>0.10.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>uk.com.robust-it</groupId>
       <artifactId>cloning</artifactId>
       <version>1.9.5</version>
