--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.netty/netty -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.11.Final</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.thrift</groupId>
@@ -158,14 +164,6 @@
       <version>3.12.1.GA</version>
     </dependency>
 
-    <!-- junit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-
     <!-- ms sql driver -->
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
@@ -221,11 +219,6 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -265,30 +258,6 @@
         <groupId>org.mybatis.generator</groupId>
         <artifactId>mybatis-generator-maven-plugin</artifactId>
         <version>1.3.0</version>
-      </plugin>
-
-      <plugin>
-        <artifactId>exec-maven-plugin</artifactId>
-        <groupId>org.codehaus.mojo</groupId>
-        <version>1.3.1</version>
-        <inherited>false</inherited>
-        <executions>
-          <execution>
-            <!-- Run our version calculation script -->
-            <id>Version Calculation</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>C:\DevTools\ConfigGen\ConfigGen.exe</executable>
-          <arguments>
-            <argument>-gd</argument>
-            <argument>${project.basedir}</argument>
-          </arguments>
-        </configuration>
       </plugin>
     </plugins>
   </build>
