删除相关信息

--- a/collectwebhttp/src/main/webapp/WEB-INF/jdbc.properties
+++ b/collectwebhttp/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://pub.mysql.db.dev.sh.ctripcorp.com:28747/groupwormholedb?characterEncoding=utf8
-jdbc.username=us_dev_lifana
+jdbc.url=
+jdbc.username=
 jdbc.password=root123456
