--- a/collectwebhttp/pom.xml
+++ b/collectwebhttp/pom.xml
@@ -2,6 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>collectwebhttp</artifactId>
 
     <parent>
         <artifactId>collect</artifactId>
@@ -9,7 +10,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>collect-web-http</artifactId>
     <packaging>war</packaging>
 
     <name>collect-web-http Maven Webapp</name>
@@ -154,13 +154,6 @@
             <artifactId>javassist</artifactId>
         </dependency>
 
-        <!-- ms sql driver -->
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc</artifactId>
-        </dependency>
-
-        <!-- logger -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
