--- a/collectwebhttp/pom.xml
+++ b/collectwebhttp/pom.xml
@@ -3,7 +3,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>collectwebhttp</artifactId>
-
+    <groupId>collectwebhttp</groupId>
+    <version>1.0-SNAPSHOT</version>
     <parent>
         <artifactId>collect</artifactId>
         <groupId>collect</groupId>
@@ -16,23 +17,17 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
-        <!--添加common模块-->
-        <!--<dependency>
-            <artifactId>collect</artifactId>
-            <groupId>collect</groupId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/io.netty/netty -->
         <!-- MySQL连[测试用]-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.netty/netty -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-        </dependency>
+        </dependency><!---->
 
         <dependency>
             <groupId>org.apache.thrift</groupId>
@@ -63,31 +58,37 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
-            <version>${org.springframework.version}</version>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -136,7 +137,6 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -154,6 +154,7 @@
             <artifactId>javassist</artifactId>
         </dependency>
 
+        <!-- logger -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -167,18 +168,12 @@
             <artifactId>logback-core</artifactId>
         </dependency>
 
-        <!-- baiji -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
 
-        <!--xml解析-->
-        <dependency>
-            <groupId>xstream</groupId>
-            <artifactId>xstream</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -225,13 +220,5 @@
         </resources>
 
 
-        <plugins>
-            <!--mybatis.generator-->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.0</version>
-            </plugin>
-        </plugins>
     </build>
 </project>
